loadbalancer.tf
#creating application load balancer
resource "aws_lb" "external-loadbalancer" {
  name               = "external-loadbalancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.demosg.id]
  subnets            = [aws_subnet.publicsubnet-1.id, aws_subnet.publicsubnet-2.id]
}
resource "aws_lb_target_group" "target-elb" {
  name     = "ALB-TG"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.demovpc.id
}
resource "aws_lb_target_group_attachment" "attachement1" {
  target_group_arn = aws_lb_target_group.target-elb.arn
  target_id        = aws_instance.demoinstance1.id
  port             = 80
  depends_on       = [aws_instance.demoinstance1]
}
resource "aws_lb_target_group_attachment" "attachement2" {
  target_group_arn = aws_lb_target_group.target-elb.arn
  target_id        = aws_instance.demoinstance2.id
  port             = 80
  depends_on       = [aws_instance.demoinstance2]
}
resource "aws_lb_listener" "external-loadbalancer" {
  load_balancer_arn = aws_lb.external-loadbalancer.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target-elb.arn
  }
}
